--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/server.js",
   "scripts": {
     "start": "tsc && node dist/server.js",
+    "dev": "tsc-watch --onSuccess \"node ./dist/server.js\"",
     "lint": "eslint . --ext .ts"
   },
   "author": "Renan Kummer",
@@ -14,6 +15,7 @@
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
     "eslint": "^8.49.0",
+    "tsc-watch": "^6.0.4",
     "typescript": "^5.2.2"
   },
   "dependencies": {
